# triforce

./: .gitignore  Cargo.toml  LICENSE  README.md  build-musl.sh  cover-test.sh  perf-results.md  test-check-given-covers.sh
cloud/: fetch.sh  kill.sh  nuke.sh  run.sh  startup.sh  status.sh  test-job.sh
inductive-region/: allowed-in-covers.json  allowed-in-fixed-region.json  required-tiling.json  start.json
opts/: 1-compact-bitops.md  2-neighbor-bitmasks.md  3-precompute-tile-masks.md  4-cost-function.md  5-popcnt-pruning.md
scripts/: analyze-timing.py  bench.sh  draw-region.py  juxtapose-images.py  print-covers.py  shuffle-json.py  split-json.sh  strip-timers.sh
size-2/: 1-lines.json  2-lines.json  3-lines.json  4-lines.json  5-lines.json  6-lines.json  7-clipped.json  9-clipped-ind.json  9-clipped.json  corner-cover.json  failing-cover.json  inductive-cover-7.json  inductive-cover.json  triangle-6.json
size-2/corner/: 5-clipped-cover.json  5-clipped.json  6-clipped-cover.json  6-clipped.json  7-cover.json  8-cover.json  9-clipped.json  9-cover.json  full-col-5.json  full-col-6.json  full-col-7.json  full-col-8.json  full-col-9.json
src/: cli.rs  concurrency.rs  fmt.rs  graph.rs  iter.rs  lib.rs  macros.rs  main.rs  metagraph.rs  viz.rs
triangles/: 5.json  6.json  7.json  8.json  9.json
