[package]
name = "triforce"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
lru = "0.16.2"
rayon = "1.11.0"
scc = "3.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
