[package]
name = "triforce"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
ahash = "0.8.12"
bevy = { version = "0.18.0", default-features = false, features = [
"2d",
"dev",
"dynamic_linking",
] }
bevy_image_export = "0.16"
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
itertools = "0.14.0"
hexx = { version = "0.24.0", features = ["bevy"] }
log = "0.4.28"
lru = "0.16.2"
petgraph = { version = "0.8.3", features = ["serde-1"] }
rayon = "1.11.0"
rustworkx-core = "0.17.1"
scc = "3.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
