[package]
name = "triforce"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
ahash = "0.8.12"
bevy = { version = "0.18.0", default-features = false, features = [
"2d_api",
"2d_bevy_render",
"scene",
"ui_api",
"ui_bevy_render",
"default_app",
"default_platform",
"dev",
"dynamic_linking",
], optional = true }
bevy_image_export = { version = "0.16", optional = true }
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
itertools = "0.14.0"
hexx = { version = "0.24.0", features = ["bevy"] }
log = "0.4.28"
lru = "0.16.2"
petgraph = { version = "0.8.3", features = ["serde-1"] }
rayon = "1.11.0"
rustworkx-core = "0.17.1"
scc = "3.6.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
rendering = ["bevy", "bevy_image_export"]
# default = ["rendering"]

[[bin]]
name = "extract-diameter"
path = "src/bin/extract-diameter.rs"
required-features = ["rendering"]

[[bin]]
name = "render"
path = "src/bin/render.rs"
required-features = ["rendering"]

[[bin]]
name = "draw-region"
path = "src/bin/draw-region.rs"
required-features = ["rendering"]

[[bin]]
name = "build-metagraph"
path = "src/bin/build-metagraph.rs"
required-features = ["rendering"]
